fixed submit button not appearing correctly when collapsed

--- a/static/style.css
+++ b/static/style.css
@@ -112,6 +112,10 @@ input, textarea {
     margin-bottom: 10rem;
 }
 
+#contactSection {
+    display: block;
+}
+
 @media (min-width: 58.5rem) {
     .wrapper {
         justify-content: left;
@@ -129,16 +133,22 @@ input, textarea {
         position: fixed;
         top: 1rem;
         right: 4rem;
+        width: auto;
     }
 }
 
+.container {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-end; /* button hugs the right */
+}
+
 #submit {
-    display: block;
     cursor: pointer;
     background-color: lightslategray;
     color: white;
     border-radius: 0.25rem;
     border-color: grey;
-    margin-left: auto;
     padding: 0.6rem 1.9rem 0.6rem 1.9rem;
 }
+
